--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,7 @@ asterdex_api_key=
 asterdex_api_secret=
 hyperliquid_private_key=
 hyperliquid_wallet_address=
+lighter_account_index=YOUR_ACCOUNT_INDEX
+lighter_api_key_index=3
+lighter_api_private_key=YOUR_API_PRIVATE_KEY_FOR_INDEX_3
 DISCORD_WEBHOOK_URL=
-
